qwik-optimizer-oxc/tests/snapshots/should_wrap_object_with_fn_signal.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const _hf0 = (p0) => p0.myobj.id + "test";
const _hf0_str = "p0.myobj.id+\"test\"";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const _hf0 = (p0) => p0.myobj.id + "test";
const _hf0_str = "p0.myobj.id+\"test\"";
export const default_component_jN9ZUuuADmk = (props) => {
	const item = props.something.count;
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, /* @__PURE__ */ _jsxSorted("div", { data-no-wrap: item ? item * 2 : null }, { "data-wrap": _fnSignal(_hf0, [props], _hf0_str) }, null, 3, "u6_0"), 3, "u6_1");
}
